<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/input_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:labelFor="@id/inputtext"
        android:text="@string/input_temperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/convert_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:onClick="action_convert"
        android:text="@string/convert"
        app:layout_constraintEnd_toStartOf="@+id/auto_switch"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputtext" />

    <TextView
        android:id="@+id/result_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convert_button" />

    <EditText
        android:id="@+id/inputtext"
        android:layout_width="261dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/input_unit"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_textview"
        tools:ignore="TouchTargetSizeCheck"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="260dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:labelFor="@id/result_textview"
        android:text="@string/result"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/output_unit"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_textview"
        app:layout_constraintVertical_bias="0.021" />

    <Spinner
        android:id="@+id/input_unit"
        android:layout_width="90dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:entries="@array/array_temp_unit"
        app:layout_constraintBottom_toBottomOf="@+id/inputtext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inputtext"
        app:layout_constraintTop_toTopOf="@+id/inputtext"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TouchTargetSizeCheck" />

    <Spinner
        android:id="@+id/output_unit"
        android:layout_width="90dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:entries="@array/array_temp_unit"
        app:layout_constraintBottom_toBottomOf="@+id/resultText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/resultText"
        app:layout_constraintTop_toTopOf="@+id/resultText"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TouchTargetSizeCheck" />

    <Switch
        android:id="@+id/auto_switch"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="36dp"
        android:text="@string/auto_convert"
        app:layout_constraintBottom_toBottomOf="@+id/convert_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/convert_button"
        app:layout_constraintVertical_bias="0.428" />

</androidx.constraintlayout.widget.ConstraintLayout>